fm-services-loc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp

spec:
  selector:
    app: webapp

  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 30080      
      targetPort: 80
      #nodePort: 30100
  #type: LoadBalancer
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue

spec:
  selector:
    app: queue    

  ports:
    - name: http
      port: 8161
      nodePort: 30010

    - name: endpoint
      port: 61616

  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker

spec:
  selector:
    app: position-tracker    

  ports:
    - name: http
      port: 8080
      #nodePort: 30020
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway

spec:
  selector:
    app: api-gateway    

  ports:
    - name: http
      port: 8080
      #nodePort: 30020

  type: ClusterIP
