mssql-deployment-az.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 10 
      containers:
      - name: mssql
        image: microsoft/mssql-server-linux #mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
          - name: mssql-persistent-storage 
            mountPath: /var/opt/mssql
      volumes:
        - name: mssql-persistent-storage
          persistentVolumeClaim:
            claimName: mssql-pv-claim         
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
      #nodePort: 30200
  #type: ClusterIP
  type: LoadBalancer
