mssql-deployment-loc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 10 
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest #microsoft/mssql-server-linux
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-persistent-storage 
          mountPath: /var/opt/mssql
      volumes:
      - name: mssql-persistent-storage
        persistentVolumeClaim:
          claimName: mssql-pv-claim         
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      #targetPort: 1433
      #nodePort: 30200
  #type: NodePort
  type: LoadBalancer
