mvc-deployment-loc.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mvc-deployment
spec:
  selector:
    matchLabels:
      app: mvc
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: mvc
    spec:
      containers:
      - name: mvc
        image: ricafortdocker/products-store-mvc:v1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mvc-service
spec:
  selector:
    app: mvc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30100
  #type: NodePort
  type: LoadBalancer
