fleetman-ingress-loc.yaml
apiVersion: extensions/v1beta1 #networking.k8s.io/v1beta1 #networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetman-ingress-host
spec:
  tls:
    - secretName: fleetman-ricafortdemos-local-tls
      hosts:
       - fleetman.ricafortdemos.local
  rules:
  - host: fleetman.ricafortdemos.local
    http:
      paths:
      #- pathType: Prefix
      #  path: "/bar"
        - backend:
            serviceName: fleetman-webapp
            servicePort: 80
          #service:
          #  name: mvc-service
          #  port:
          #    number: 80
