mssql-ingress-loc.yaml
---
apiVersion: extensions/v1beta1 #networking.k8s.io/v1beta1 #networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvc-ingress-host
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: mssql-local-tls #products-ricafortdemos-local-tls
      hosts:
       - mssql.ricafortdemos.local
  rules:
  - host: mssql.ricafortdemos.local
    http:
      paths:
      #- pathType: Prefix
      #  path: "/bar"
        - backend:
            serviceName: mssql-service
            servicePort: 1433
          #service:
          #  name: mvc-service
          #  port:
          #    number: 80
