mvc-ingress-az.yaml
---
apiVersion: extensions/v1beta1 #networking.k8s.io/v1beta1 #networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvc-ingress-az
  #annotations:
  #  kubernetes.io/ingress.class: nginx
  #  nginx.ingress.kubernetes.io/use-regex: "true"
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: aks-ingress-tls
      hosts:
       - products-az.ricafort.net
  rules:
  - host: products-az.ricafort.net
    http:
      paths:
      #- pathType: Prefix
      #  path: "/bar"
        - backend:
            serviceName: mvc-service
            servicePort: 80
          #service:
          #  name: mvc-service
          #  port:
          #    number: 80
