mvc-ingress-loc.yaml
---
apiVersion: extensions/v1beta1 #networking.k8s.io/v1beta1 #networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvc-ingress-host
spec:
  tls:
    - secretName: products-ricafortdemos-local-tls
      hosts:
       - products.ricafortdemos.local
  rules:
  - host: products.ricafortdemos.local
    http:
      paths:
      #- pathType: Prefix
      #  path: "/bar"
        - backend:
            serviceName: mvc-service
            servicePort: 80
          #service:
          #  name: mvc-service
          #  port:
          #    number: 80
