nginx-ingress-loc.yaml
---
apiVersion: extensions/v1beta1 #networking.k8s.io/v1beta1 #networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-host
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/acme-challenge-type: http01
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: letsencrypt-staging-root #ricafortdemos-local-tls
      hosts:
       - ricafort.net
  rules:
  - host: ricafort.net
    http:
      paths:
      #- pathType: Prefix
      #  path: "/bar"
        - backend:
            serviceName: nginx
            servicePort: 80
          #service:
          #  name: mvc-service
          #  port:
          #    number: 80
