queue-ingress-loc.yaml
apiVersion: extensions/v1beta1 #networking.k8s.io/v1beta1 #networking.k8s.io/v1
kind: Ingress
metadata:
  name: queue-ingress-host
spec:
  tls:
    - secretName: queue-ricafortdemos-local-tls
      hosts:
       - queue.ricafortdemos.local
  rules:
  - host: queue.ricafortdemos.local
    http:
      paths:
      #- pathType: Prefix
      #  path: "/bar"
        - backend:
            serviceName: fleetman-queue
            servicePort: 8161
          #service:
          #  name: mvc-service
          #  port:
          #    number: 80
